Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59184

gtk+: QFileDialog freeze

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8, 6.9
    • 5.8.0, 5.9.3, 5.14.1
    • None
    • Linux Mint 18.1 Cinnamon 64 bit, Qt 5.8.0 64 bits
      Ubuntu 16.04, Qt is 5.9.3
    • Linux/X11

      QFileDialog (getExistingDirectory, getOpenFileName, or getSaveFileName) freeze when I launch it 2 times.

      At the first time, i have this message in console :
      [17372:17372:0227/163239:ERROR:browser_main_loop.cc(261)] GLib-GObject: cannot register existing type 'GdkWindow'
      [17372:17372:0227/163239:ERROR:browser_main_loop.cc(261)] GLib: g_once_init_leave: assertion 'result != 0' failed

      But it's working.

      At the second time, I have the same message, but the application gui "freeze" or the filedialog is opened but not visible. At this moment, I can just only kill my application.

        1. 问题截图.png
          61 kB
          caiyang jiang
        2. filedialogtest.zip
          2 kB
          Kai Nickel
        3. QTBUG-59184-widgets.tgz
          2 kB
          Shawn Rutledge
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            liaqi Liang Qi
            olivierl olivierl
            Votes:
            6 Vote for this issue
            Watchers:
            18 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes