sclang: Fix FileDialog freeze on Linux

https://bugreports.qt.io/browse/QTBUG-59184