QtCollider/widgets/QcFileDialog.cpp
@@ -25,7 +25,7 @@
 QC_DECLARE_QOBJECT_FACTORY(QcFileDialog);
 
 QcFileDialog::QcFileDialog( int fileMode, int acceptMode, const QString& startDir ) {
-  dialog = new QFileDialog();
+  dialog = new QFileDialog(nullptr);
 
   dialog->setDirectory(QDir{startDir});
 
